# case-insensitive-bench

./: README  bench.hs  case-insensitive-bench.cabal
