name:          case-insensitive-bench
version:       0.1
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
copyright:     2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
synopsis:      Criterion benchmarks for case-insensitive

Executable bench-case-insensitive
  Main-is: bench.hs
  GHC-Options: -Wall -O2
  build-depends: base             >= 4    && < 4.4
               , bytestring       >= 0.9  && < 0.10
               , criterion        >= 0.5  && < 0.6
               , case-insensitive >= 0.2  && < 0.3 
               , ascii            >= 0.0  && < 0.1
